the text box is too small

--- a/index.html
+++ b/index.html
@@ -396,8 +396,11 @@
         ref.authWithOAuthPopup("facebook", function (error, authData) {
             if (error) {
                 console.log("Login Failed!", error);
+                window.location.href='owner.html'
+
             } else {
                 console.log("Authenticated successfully with payload:", authData);
+                window.location.href='owner.html'
             }
         });
     }
