--- a/owner.html
+++ b/owner.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Keypin - Your Iteams</title>
+    <title>Keypin - Your Items</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -21,6 +21,9 @@
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
+    <!--Firebase-->
+    <script src="https://cdn.firebase.com/js/client/2.4.1/firebase.js"></script>
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -29,6 +32,16 @@
     <![endif]-->
 
 </head>
+<div>
+    <button type="button" class="btn btn-lg btn-dark" onclick="fblogout()">FACEBOOK LOGOUT</button>
+</div>
+<script>
+    function fblogout() {
+        var ref = new Firebase("https://keypin.firebaseio.com");
+        ref.unauth();
+        window.location.href = 'index.html'
+    }
+</script>
 
 <body>
     <!-- Portfolio -->
