--- a/owner.html
+++ b/owner.html
@@ -23,6 +23,8 @@
 
     <!--Firebase-->
     <script src="https://cdn.firebase.com/js/client/2.4.1/firebase.js"></script>
+    <script src="js/main.js"></script>
+
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -35,13 +37,6 @@
 <div>
     <button type="button" class="btn btn-lg btn-dark" onclick="fblogout()">FACEBOOK LOGOUT</button>
 </div>
-<script>
-    function fblogout() {
-        var ref = new Firebase("https://keypin.firebaseio.com");
-        ref.unauth();
-        window.location.href = 'index.html'
-    }
-</script>
 
 <body>
     <!-- Portfolio -->
@@ -49,7 +44,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h2>Your Iteams</h2>
+                    <h2>Your Items</h2>
                     <hr class="small">
                     <div class="row">
                         <div class="col-md-6">
