--- a/index.html
+++ b/index.html
@@ -121,10 +121,9 @@
                                 <i class="fa fa-cloud fa-stack-1x text-primary"></i>
                             </span>
                             <h4>
-                                <strong>Service Name</strong>
+                                <strong>Find the Label</strong>
                             </h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                            <a href="#" class="btn btn-light">Learn More</a>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
@@ -134,10 +133,9 @@
                                 <i class="fa fa-compass fa-stack-1x text-primary"></i>
                             </span>
                             <h4>
-                                <strong>Service Name</strong>
+                                <strong>Enter the code</strong>
                             </h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                            <a href="#" class="btn btn-light">Learn More</a>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
@@ -147,10 +145,9 @@
                                 <i class="fa fa-flask fa-stack-1x text-primary"></i>
                             </span>
                             <h4>
-                                <strong>Service Name</strong>
+                                <strong>Chat with the owner</strong>
                             </h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                            <a href="#" class="btn btn-light">Learn More</a>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
@@ -160,10 +157,9 @@
                                 <i class="fa fa-shield fa-stack-1x text-primary"></i>
                             </span>
                             <h4>
-                                <strong>Service Name</strong>
+                                <strong>Return the Item</strong>
                             </h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                            <a href="#" class="btn btn-light">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -179,7 +175,7 @@
     <div class="container">
         <div class="row text-center">
             <div class="col-lg-10 col-lg-offset-1">
-                <h2>Did you lose something?</h2>
+                <h2>Might lose something?</h2>
                 <hr class="small">
                 <div class="row">
                     <div class="col-md-3 col-sm-6">
@@ -189,10 +185,9 @@
                                 <i class="fa fa-cloud fa-stack-1x text-primary"></i>
                             </span>
                             <h4>
-                                <strong>Service Name</strong>
+                                <strong>Label your items</strong>
                             </h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                            <a href="#" class="btn btn-light">Learn More</a>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
@@ -202,10 +197,9 @@
                                 <i class="fa fa-compass fa-stack-1x text-primary"></i>
                             </span>
                             <h4>
-                                <strong>Service Name</strong>
+                                <strong>Lose item</strong>
                             </h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                            <a href="#" class="btn btn-light">Learn More</a>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
@@ -215,10 +209,9 @@
                                 <i class="fa fa-flask fa-stack-1x text-primary"></i>
                             </span>
                             <h4>
-                                <strong>Service Name</strong>
+                                <strong>Get notified of found item</strong>
                             </h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                            <a href="#" class="btn btn-light">Learn More</a>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
@@ -228,10 +221,9 @@
                                 <i class="fa fa-shield fa-stack-1x text-primary"></i>
                             </span>
                             <h4>
-                                <strong>Service Name</strong>
+                                <strong>Get your item back</strong>
                             </h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                            <a href="#" class="btn btn-light">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -338,10 +330,7 @@
                 <br>
                 <ul class="list-inline">
                     <li>
-                        <a href="#"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
+                        <a href="https://github.com/TheFireFerret/hackUTD2016"><i class="fa fa-github fa-fw fa-3x"></i></a>
                     </li>
                 </ul>
                 <hr class="small">
@@ -358,36 +347,22 @@
 <script src="js/bootstrap.min.js"></script>
 
 <!-- Custom Theme JavaScript -->
-<script>
-    // Closes the sidebar menu
-    $("#menu-close").click(function (e) {
-        e.preventDefault();
-        $("#sidebar-wrapper").toggleClass("active");
-    });
+<!--<script>-->
+    <!--// Closes the sidebar menu-->
+    <!--$("#menu-close").click(function (e) {-->
+        <!--e.preventDefault();-->
+        <!--$("#sidebar-wrapper").toggleClass("active");-->
+    <!--});-->
 
-    // Opens the sidebar menu
-    $("#menu-toggle").click(function (e) {
-        e.preventDefault();
-        $("#sidebar-wrapper").toggleClass("active");
-    });
+    <!--// Opens the sidebar menu-->
+    <!--$("#menu-toggle").click(function (e) {-->
+        <!--e.preventDefault();-->
+        <!--$("#sidebar-wrapper").toggleClass("active");-->
+    <!--});-->
 
-    // Scrolls to the selected menu item on the page
-    $(function () {
-        $('a[href*=#]:not([href=#])').click(function () {
-            if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') || location.hostname == this.hostname) {
+    <!--// Scrolls to the selected menu item on the page-->
 
-                var target = $(this.hash);
-                target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
-                if (target.length) {
-                    $('html,body').animate({
-                        scrollTop: target.offset().top
-                    }, 1000);
-                    return false;
-                }
-            }
-        });
-    });
-</script>
+<!--</script>-->
 
 
 </body>
