--- a/owner.html
+++ b/owner.html
@@ -39,7 +39,7 @@
 </div>
 
 <body>
-    <!-- Portfolio -->
+    <!-- Owner -->
     <section id="portfolio" class="portfolio">
         <div class="container">
             <div class="row">
@@ -49,29 +49,33 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <!-- <a href="#"> -->
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
+                                <a href="#">
+                                    <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg" title="img/portfolio-1.jpg">
+                                    <p>ID: </p>
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <!-- <a href="#"> -->
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
+                                <a href="#">
+                                    <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg" title="img/portfolio-2.jpg">
+                                    <p>ID: </p>
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <!-- <a href="#"> -->
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
+                                <a href="#">
+                                    <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg" title="img/portfolio-3.jpg">
+                                    <p>ID: </p>
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <!-- <a href="#"> -->
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
+                                <a href="#">
+                                    <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg" title="img/portfolio-4.jpg">
+                                    <p>ID: </p>
                                 </a>
                             </div>
                         </div>
@@ -85,19 +89,6 @@
         </div>
         <!-- /.container -->
     </section>
-
-    <!-- Call to Action -->
-<!--     <aside class="call-to-action bg-primary">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h3>The buttons below are impossible to resist.</h3>
-                    <a href="#" class="btn btn-lg btn-light">Click Me!</a>
-                    <a href="#" class="btn btn-lg btn-dark">Look at Me!</a>
-                </div>
-            </div>
-        </div>
-    </aside> -->
 
     <!-- Footer -->
     <footer>
@@ -115,13 +106,13 @@
                     <br>
                     <ul class="list-inline">
                         <li>
-                            <!-- <a href="#"> --><i class="fa fa-facebook fa-fw fa-3x"></i></a>
+                            <a href="#"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
                         </li>
                         <li>
-                            <!-- <a href="#"> --><i class="fa fa-twitter fa-fw fa-3x"></i></a>
+                            <a href="#"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
                         </li>
                         <li>
-                            <!-- <a href="#"> --><i class="fa fa-dribbble fa-fw fa-3x"></i></a>
+                            <a href="#"><i class="fa fa-dribbble fa-fw fa-3x"></i></a>
                         </li>
                     </ul>
                     <hr class="small">
