About page updated

--- a/index.html
+++ b/index.html
@@ -96,8 +96,10 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2>KeyPin is the perfect tool to recover your lost items</h2>
-                <p class="lead">blah blah blah blah stuff about the thing here and more stuff that sounds cool and
-                    fancy</p>
+                <p class="lead">Ever lost an item and wanted to be contacted without 
+                fearing about putting too much information on the item?</p>
+                <p class="lead">KeyPin serves as the middle man, making sure both sides can message 
+                each other while maintaining anonymity.</p>
             </div>
         </div>
         <!-- /.row -->
@@ -121,9 +123,10 @@
                                 <i class="fa fa-cloud fa-stack-1x text-primary"></i>
                             </span>
                             <h4>
-                                <strong>Find the Label</strong>
+                                <strong>1) Find the Label</strong>
                             </h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            <p>If the item is registered with KeyPin, locate the 
+                            key, and go to keypin.me to type in the id number. </p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
@@ -133,9 +136,10 @@
                                 <i class="fa fa-compass fa-stack-1x text-primary"></i>
                             </span>
                             <h4>
-                                <strong>Enter the code</strong>
+                                <strong>2) Enter the code</strong>
                             </h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            <p>Enter the key onto this website to find the 
+                            anonymous owner of the item. </p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
@@ -145,9 +149,10 @@
                                 <i class="fa fa-flask fa-stack-1x text-primary"></i>
                             </span>
                             <h4>
-                                <strong>Chat with the owner</strong>
+                                <strong>3) Chat with the Owner</strong>
                             </h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            <p>This is your opportunity to exchange information. 
+                            The chat is only available between owner and founder.</p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
@@ -157,9 +162,10 @@
                                 <i class="fa fa-shield fa-stack-1x text-primary"></i>
                             </span>
                             <h4>
-                                <strong>Return the Item</strong>
+                                <strong>4) Return the Item</strong>
                             </h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            <p>Hopefully, an agreement is met. How you and the
+                            owner decide on returning the item is up to you both.</p>
                         </div>
                     </div>
                 </div>
@@ -185,9 +191,10 @@
                                 <i class="fa fa-cloud fa-stack-1x text-primary"></i>
                             </span>
                             <h4>
-                                <strong>Label your items</strong>
+                                <strong>1) Label your items</strong>
                             </h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            <p>Register your items in your profile and label your 
+                            items with the unique key id. Printed labels to come.</p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
@@ -197,9 +204,10 @@
                                 <i class="fa fa-compass fa-stack-1x text-primary"></i>
                             </span>
                             <h4>
-                                <strong>Lose item</strong>
+                                <strong>2) Lose Item</strong>
                             </h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            <p>Optional. But if you want to use our services to 
+                            its fullest, you must lose your item, deliberately or not.</p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
@@ -209,9 +217,10 @@
                                 <i class="fa fa-flask fa-stack-1x text-primary"></i>
                             </span>
                             <h4>
-                                <strong>Get notified of found item</strong>
+                                <strong>3) Get Found Notification</strong>
                             </h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            <p>Once found, you'll get notified to start a private
+                            message channel with the founder and exchange info.</p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
@@ -221,9 +230,10 @@
                                 <i class="fa fa-shield fa-stack-1x text-primary"></i>
                             </span>
                             <h4>
-                                <strong>Get your item back</strong>
+                                <strong>4) Get Item Back</strong>
                             </h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            <p>Hopefully, an agreement will be met. Whether you 
+                            meet the person or have it dropped off is up to you both.</p>
                         </div>
                     </div>
                 </div>
