--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-cloud fa-stack-1x text-primary"></i>
+                                <i class="fa fa-search fa-stack-1x text-primary"></i>
                             </span>
                             <h4>
                                 <strong>1) Find the Label</strong>
@@ -133,10 +133,10 @@
                         <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-compass fa-stack-1x text-primary"></i>
+                                <i class="fa fa-file-text fa-stack-1x text-primary"></i>
                             </span>
                             <h4>
-                                <strong>2) Enter the code</strong>
+                                <strong>2) Enter the Code</strong>
                             </h4>
                             <p>Enter the key onto this website to find the 
                             anonymous owner of the item. </p>
@@ -146,7 +146,7 @@
                         <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-flask fa-stack-1x text-primary"></i>
+                                <i class="fa fa-comment fa-stack-1x text-primary"></i>
                             </span>
                             <h4>
                                 <strong>3) Chat with the Owner</strong>
@@ -159,7 +159,7 @@
                         <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-shield fa-stack-1x text-primary"></i>
+                                <i class="fa fa-child fa-stack-1x text-primary"></i>
                             </span>
                             <h4>
                                 <strong>4) Return the Item</strong>
@@ -188,7 +188,7 @@
                         <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-cloud fa-stack-1x text-primary"></i>
+                                <i class="fa fa-edit fa-stack-1x text-primary"></i>
                             </span>
                             <h4>
                                 <strong>1) Label your items</strong>
@@ -201,7 +201,7 @@
                         <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-compass fa-stack-1x text-primary"></i>
+                                <i class="fa fa-eye-slash fa-stack-1x text-primary"></i>
                             </span>
                             <h4>
                                 <strong>2) Lose Item</strong>
@@ -214,7 +214,7 @@
                         <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-flask fa-stack-1x text-primary"></i>
+                                <i class="fa fa-exclamation-circle fa-stack-1x text-primary"></i>
                             </span>
                             <h4>
                                 <strong>3) Get Found Notification</strong>
@@ -227,7 +227,7 @@
                         <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-shield fa-stack-1x text-primary"></i>
+                                <i class="fa fa-child fa-stack-1x text-primary"></i>
                             </span>
                             <h4>
                                 <strong>4) Get Item Back</strong>
