--- a/iteminfo.html
+++ b/iteminfo.html
@@ -18,10 +18,13 @@
     <link href="css/stylish-portfolio.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 
+    <!-- PureCSS -->
+    <link rel="stylesheet" href="css/pure-min.css">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic"
+          rel="stylesheet" type="text/css">
 
     <!--Firebase-->
     <script src="https://cdn.firebase.com/js/client/2.4.1/firebase.js"></script>
@@ -36,11 +39,14 @@
     <![endif]-->
 
 </head>
-<div>
-    <button type="button" class="btn btn-lg btn-dark" onclick="fblogout()">FACEBOOK LOGOUT</button>
-</div>
+<!--<div>-->
+    <!--<button type="button" class="btn btn-lg btn-dark" onclick="fblogout()">FACEBOOK LOGOUT</button>-->
+<!--</div>-->
 
 <body>
+
+
+<!--<button type="button" class="btn btn-lg btn-dark" onclick="fbloginNoRedirect()">FACEBOOK</button>-->
 
 <!-- Trigger the modal with a button -->
 <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Add New Item</button>
@@ -56,11 +62,26 @@
                 <h4 class="modal-title centered">New Item</h4>
             </div>
             <div class="modal-body">
-                <p>Some text in the modal.</p>
+                <div>
+                    <form class="pure-form pure-form-aligned" onsubmit="additem()">
+                        <fieldset>
+                            <div class="pure-control-group">
+                                <label for="item_name_form">Name</label>
+                                <input id="item_name_form" type="text" placeholder="Name" class="item-input">
+                            </div>
+
+                            <div class="pure-control-group">
+                                <label for="item_id_form">ID</label>
+                                <input id="item_id_form" type="text" placeholder="ID" class="item-input">
+                            </div>
+                        </fieldset>
+                </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="submit" class="btn btn-dark" data-dismiss="modal" onclick="additem()">Submit</button>
             </div>
+            </form>
+
         </div>
 
     </div>
@@ -68,49 +89,49 @@
 
 <!-- Portfolio -->
 <!--<section id="portfolio" class="portfolio">-->
-    <!--<div class="container">-->
-        <!--<div class="row">-->
-            <!--<div class="col-lg-10 col-lg-offset-1 text-center">-->
-                <!--<h2>Your Items</h2>-->
-                <!--<hr class="small">-->
-                <!--<div class="row">-->
-                    <!--<div class="col-md-6">-->
-                        <!--<div class="portfolio-item">-->
-                            <!--&lt;!&ndash; <a href="#"> &ndash;&gt;-->
-                            <!--<img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">-->
-                            <!--</a>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="col-md-6">-->
-                        <!--<div class="portfolio-item">-->
-                            <!--&lt;!&ndash; <a href="#"> &ndash;&gt;-->
-                            <!--<img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">-->
-                            <!--</a>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="col-md-6">-->
-                        <!--<div class="portfolio-item">-->
-                            <!--&lt;!&ndash; <a href="#"> &ndash;&gt;-->
-                            <!--<img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">-->
-                            <!--</a>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="col-md-6">-->
-                        <!--<div class="portfolio-item">-->
-                            <!--&lt;!&ndash; <a href="#"> &ndash;&gt;-->
-                            <!--<img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">-->
-                            <!--</a>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                <!--</div>-->
-                <!--&lt;!&ndash; /.row (nested) &ndash;&gt;-->
-                <!--<a href="#" class="btn btn-dark">View More Items</a>-->
-            <!--</div>-->
-            <!--&lt;!&ndash; /.col-lg-10 &ndash;&gt;-->
-        <!--</div>-->
-        <!--&lt;!&ndash; /.row &ndash;&gt;-->
-    <!--</div>-->
-    <!--&lt;!&ndash; /.container &ndash;&gt;-->
+<!--<div class="container">-->
+<!--<div class="row">-->
+<!--<div class="col-lg-10 col-lg-offset-1 text-center">-->
+<!--<h2>Your Items</h2>-->
+<!--<hr class="small">-->
+<!--<div class="row">-->
+<!--<div class="col-md-6">-->
+<!--<div class="portfolio-item">-->
+<!--&lt;!&ndash; <a href="#"> &ndash;&gt;-->
+<!--<img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">-->
+<!--</a>-->
+<!--</div>-->
+<!--</div>-->
+<!--<div class="col-md-6">-->
+<!--<div class="portfolio-item">-->
+<!--&lt;!&ndash; <a href="#"> &ndash;&gt;-->
+<!--<img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">-->
+<!--</a>-->
+<!--</div>-->
+<!--</div>-->
+<!--<div class="col-md-6">-->
+<!--<div class="portfolio-item">-->
+<!--&lt;!&ndash; <a href="#"> &ndash;&gt;-->
+<!--<img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">-->
+<!--</a>-->
+<!--</div>-->
+<!--</div>-->
+<!--<div class="col-md-6">-->
+<!--<div class="portfolio-item">-->
+<!--&lt;!&ndash; <a href="#"> &ndash;&gt;-->
+<!--<img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">-->
+<!--</a>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--&lt;!&ndash; /.row (nested) &ndash;&gt;-->
+<!--<a href="#" class="btn btn-dark">View More Items</a>-->
+<!--</div>-->
+<!--&lt;!&ndash; /.col-lg-10 &ndash;&gt;-->
+<!--</div>-->
+<!--&lt;!&ndash; /.row &ndash;&gt;-->
+<!--</div>-->
+<!--&lt;!&ndash; /.container &ndash;&gt;-->
 <!--</section>-->
 
 <!-- Call to Action -->
@@ -136,7 +157,7 @@
                 <p>3481 Melrose Place<br>Beverly Hills, CA 90210</p>
                 <ul class="list-unstyled">
                     <li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li>
-                    <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:name@example.com">name@example.com</a>
+                    <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:name@example.com">name@example.com</a>
                     </li>
                 </ul>
                 <br>
@@ -167,20 +188,20 @@
 <!-- Custom Theme JavaScript -->
 <script>
     // Closes the sidebar menu
-    $("#menu-close").click(function(e) {
+    $("#menu-close").click(function (e) {
         e.preventDefault();
         $("#sidebar-wrapper").toggleClass("active");
     });
 
     // Opens the sidebar menu
-    $("#menu-toggle").click(function(e) {
+    $("#menu-toggle").click(function (e) {
         e.preventDefault();
         $("#sidebar-wrapper").toggleClass("active");
     });
 
     // Scrolls to the selected menu item on the page
-    $(function() {
-        $('a[href*=#]:not([href=#])').click(function() {
+    $(function () {
+        $('a[href*=#]:not([href=#])').click(function () {
             if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') || location.hostname == this.hostname) {
 
                 var target = $(this.hash);
